# light-of-kestrel

./: .gamelogger.h.kate-swp  .gitignore  CMakeLists.txt  CMakeLists.txt~  LightOfKestrel.kdev4  README.md  assetmanager.cpp  assetmanager.cpp~  assetmanager.h  assetmanager.h~  camera.cpp  camera.h  camera.h~  codedump.cpp~  dogit  entity.cpp  entity.cpp~  entity.h~  galaxy.cpp  galaxy.h  galaxy.h~  game.cpp  game.cpp~  game.h  game.h~  gamelogger.cpp~  gamelogger.h~  guimanager.cpp~  guimanager.h~  inputmanager.cpp  inputmanager.cpp~  inputmanager.h  inputmanager.h~  log.h  log.h~  main.cpp  main.cpp~  settings.cpp  settings.h  universemanager.cpp  (+3 more)
.kdev4/: LightOfKestrel.kdev4  _custom.kdev4
ai/: baseai.cpp  baseai.h  missileai.cpp  missileai.h  relationshipmanager.cpp  relationshipmanager.h  shipai.cpp  shipai.h  turretai.cpp  turretai.h
components/: armourplating.cpp  armourplating.cpp~  armourplating.h  armourplating.h~  entitycomponent.cpp  entitycomponent.cpp~  entitycomponent.h  entitycomponent.h~  missilebay.cpp  missilebay.cpp~  missilebay.h  missilebay.h~  vectorthruster.cpp  vectorthruster.cpp~  vectorthruster.h  vectorthruster.h~
controllers/: basecontroller.cpp  basecontroller.cpp~  basecontroller.h  basecontroller.h~  console.cpp  console.h  controllermanager.cpp  controllermanager.cpp~  controllermanager.h  controllermanager.h~  myplayercontroller.cpp  myplayercontroller.cpp~  myplayercontroller.h  myplayercontroller.h~  settings.h  settings.h~  shipinterfacecontroller.cpp  shipinterfacecontroller.h  worldcontroller.cpp  worldcontroller.cpp~  worldcontroller.h  worldcontroller.h~
deploy/: lightofkestrel
events/: .eventhandler.h.kate-swp  eventhandler.cpp  eventhandler.cpp~  eventhandler.h  eventhandler.h~  eventlistener.cpp  eventlistener.cpp~  eventlistener.h  eventlistener.h~
gui/: .basecontrol.cpp.kate-swp  .button.cpp.kate-swp  basecontrol.cpp  basecontrol.cpp~  basecontrol.h  basecontrol.h~  button.cpp  button.cpp~  button.h  button.h~  dropdown.cpp  dropdown.cpp~  dropdown.h  dropdown.h~  guimanager.cpp  guimanager.cpp~  guimanager.h  guimanager.h~  slider.cpp  slider.cpp~  slider.h  slider.h~  textlabel.cpp  textlabel.cpp~  textlabel.h  textlabel.h~
universe/: entity.cpp  entity.cpp~  entity.h  entity.h~  entitycomponent.cpp~  entitycomponent.h~  entityfactory.cpp  entityfactory.cpp~  entityfactory.h  entityfactory.h~  galaxy.cpp  galaxy.cpp~  galaxy.h  galaxy.h~  missilefactory.cpp  missilefactory.cpp~  missilefactory.h  missilefactory.h~  spaceship.cpp~  spaceship.h~  universemanager.cpp  universemanager.cpp~  universemanager.h  universemanager.h~
